--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "classnames": "^2.5.1",
-    "date-fns": "^4.1.0",
-    "react": "^19.0.0",
+    "date-fns": "^2.30.0",
+    "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "sass": "^1.85.0",
     "swiper": "^9",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-prettier": "^0.0.0-empty",
     "json-server": "^1.0.0-beta.3",
-    "prettier": "^3.5.1"
+    "prettier": "^3.5.1",
+    "webpack-font-preload-plugin": "^1.5.0"
   }
 }
