--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,9 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@shared/*": ["src/components/shared/*"],
-      "@models/*": ["src/models/*"]
+      "@models/*": ["src/models/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@scss/*": ["src/scss/*"]
     }
   }
 }
